cmake_minimum_required(VERSION 3.10)
project(N19VRFChain)
set(CMAKE_CXX_STANDARD 17)
find_package(OpenSSL REQUIRED)
find_package(Boost 1.71 REQUIRED COMPONENTS system)
add_executable(n19vrf src/main.cpp src/blockchain.cpp src/network.cpp src/crypto.cpp)
add_executable(tests src/test.cpp src/blockchain.cpp src/crypto.cpp)
target_link_libraries(n19vrf OpenSSL::Crypto Boost::system)
target_link_libraries(tests OpenSSL::Crypto)